[gd_scene load_steps=8 format=3 uid="uid://cdy6h7jf7vfn"]

[ext_resource type="Script" path="res://Enemy/Enemy.gd" id="1_58y1i"]
[ext_resource type="PackedScene" uid="uid://dll3md5b5ql3s" path="res://Player/rig.tscn" id="2_ciwx7"]
[ext_resource type="Script" path="res://Player/AttackCast.gd" id="3_6sy08"]
[ext_resource type="PackedScene" uid="uid://dyi76ppuxawf8" path="res://Player/area_attack.tscn" id="4_3s0wc"]
[ext_resource type="PackedScene" uid="uid://heag0q14bpcw" path="res://Components/health_component.tscn" id="4_smaun"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r2qib"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2kt5s"]

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 9
script = ExtResource("1_58y1i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_r2qib")

[node name="RigPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="Rig" parent="RigPivot" instance=ExtResource("2_ciwx7")]

[node name="Skeleton3D" parent="RigPivot/Rig/CharacterRig/GameRig" index="0"]
bones/0/position = Vector3(4.44089e-15, 0.909791, -0.0481736)
bones/2/rotation = Quaternion(0.00623437, -0.00028519, 0.00321142, 0.999975)
bones/3/rotation = Quaternion(-0.0891546, -0.00028465, 0.00852452, 0.995981)
bones/4/rotation = Quaternion(0.270432, 1.44303e-08, 9.18042e-08, 0.962739)
bones/6/rotation = Quaternion(-0.164506, -1.17585e-07, -1.96106e-08, 0.986376)
bones/7/position = Vector3(-2.85069e-08, 0.909791, -0.0481735)
bones/8/position = Vector3(-8.04427e-08, 0.909791, -0.0481735)
bones/9/position = Vector3(0.131144, 0.975996, -0.0351291)
bones/9/rotation = Quaternion(0.994216, 0.0202642, -0.0312403, 0.100738)
bones/11/rotation = Quaternion(0.395741, -0.000695345, 0.000299759, 0.918362)
bones/13/rotation = Quaternion(-0.741116, 0.0118468, 0.0243618, 0.670831)
bones/15/position = Vector3(-0.131144, 0.975995, -0.0351291)
bones/15/rotation = Quaternion(0.975742, -0.00529282, 0.0276616, 0.217107)
bones/17/rotation = Quaternion(0.42187, 0.00315918, -0.00147007, 0.90665)
bones/19/rotation = Quaternion(-0.678421, -0.02814, -0.00142687, 0.734133)
bones/21/position = Vector3(0.0251286, 1.43935, 0.0470284)
bones/21/rotation = Quaternion(-0.471316, -0.266924, -0.416156, 0.730361)
bones/22/position = Vector3(0.191352, 1.47815, -0.0104597)
bones/22/rotation = Quaternion(0.0223101, -0.163864, 0.975461, -0.145349)
bones/23/rotation = Quaternion(8.91944e-08, -0.0383155, 5.68115e-08, 0.999266)
bones/24/rotation = Quaternion(0.349729, -0.038316, -0.021835, 0.935812)
bones/46/position = Vector3(-0.0113635, 1.43935, 0.0470284)
bones/46/rotation = Quaternion(-0.472519, 0.262724, 0.413822, 0.73243)
bones/47/position = Vector3(-0.176957, 1.47838, -0.0120965)
bones/47/rotation = Quaternion(-0.0133815, -0.147268, 0.976021, 0.159736)
bones/48/rotation = Quaternion(1.15761e-07, 0.0553544, 1.73772e-07, 0.998467)
bones/49/rotation = Quaternion(0.390115, 0.0553548, 0.0280048, 0.918674)
bones/71/position = Vector3(0.127191, 1.36025, -0.0245263)
bones/71/rotation = Quaternion(2.0265e-08, 0.59906, 0.800704, -4.58803e-08)
bones/72/position = Vector3(-0.113426, 1.36025, -0.0245263)
bones/72/rotation = Quaternion(2.02651e-08, 0.59906, 0.800704, -4.58803e-08)

[node name="Knight_02" parent="RigPivot/Rig/CharacterRig/GameRig/Skeleton3D" index="1"]
visible = false

[node name="Villager_01" parent="RigPivot/Rig/CharacterRig/GameRig/Skeleton3D" index="2"]
visible = true

[node name="RightHandBone" parent="RigPivot/Rig" index="2"]
transform = Transform3D(-0.962344, -0.270797, -0.0237206, 0.222144, -0.833727, 0.50552, -0.15667, 0.481215, 0.862488, -0.350773, 1.01124, 0.0274428)

[node name="LeftHandBone" parent="RigPivot/Rig" index="3"]
transform = Transform3D(-0.970514, 0.239104, 0.0305257, -0.209366, -0.898935, 0.384814, 0.119451, 0.367076, 0.922489, 0.348162, 0.99413, -0.00901529)

[node name="RayAttachment" type="BoneAttachment3D" parent="RigPivot/Rig"]
transform = Transform3D(-0.962344, -0.270797, -0.0237206, 0.222144, -0.833727, 0.50552, -0.15667, 0.481215, 0.862488, -0.350773, 1.01124, 0.0274428)
bone_name = "DEF-hand.R"
bone_idx = 51
use_external_skeleton = true
external_skeleton = NodePath("../CharacterRig/GameRig/Skeleton3D")

[node name="AttackCast" type="RayCast3D" parent="RigPivot/Rig/RayAttachment"]
unique_name_in_owner = true
transform = Transform3D(-3.8097e-09, 4.35451e-08, 1, 0.996196, 0.0871558, -4.42399e-16, -0.0871559, 0.996195, -4.37115e-08, -0.03, 0.075, -0.05)
target_position = Vector3(0, 1, 0)
script = ExtResource("3_6sy08")

[node name="PlayerDetector" type="ShapeCast3D" parent="RigPivot/Rig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_2kt5s")
target_position = Vector3(0, 0, 1)
collision_mask = 4

[node name="AreaAttack" parent="RigPivot/Rig" instance=ExtResource("4_3s0wc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)
collision_mask = 4

[node name="HealthComponent" parent="." instance=ExtResource("4_smaun")]

[connection signal="heavy_attack" from="RigPivot/Rig" to="." method="_on_rig_heavy_attack"]
[connection signal="defeat" from="HealthComponent" to="." method="_on_health_component_defeat"]

[editable path="RigPivot/Rig"]
[editable path="RigPivot/Rig/CharacterRig"]
